<resources>
    <string name="app_name">麻將台數計算機</string>
    <string name="TakePicture">拍照</string>
    <string name="SelectPicture">選擇圖片</string>
    <string name="HandInput">手動輸入</string>
    <string name="BaseScore">底</string>
    <string name="MoreScore">台</string>
    <string name="BaseScoreHint">胡牌者可得基本分</string>
    <string name="MoreScoreHint">每多一台得分</string>
    <string name="Setting">設定</string>
    <string name="Reselect">重新選擇</string>
    <string name="NextStep">下一步</string>
    <string name="HowManyScore">請設定底/台金額方便計算最終贏得金額</string>
    <string name="OnChange">更改為</string>
    <string name="title_activity_settings">設定</string>
    <string name="count">共有</string>
    <string name="unit">張</string>
    <string name="time">次</string>
    <string name="explain">麻將術語解釋</string>
    <string name="explain_detail">麻將術語詳細解釋</string>
    <string name="pay_normal">各家要給：</string>
    <string name="pay_gun">放槍要給：</string>
    <string name="pay_home">莊家要給：</string>
    <string name="keep_earn_money">繼續賺錢！</string>
    <string name="information_pay_title">所以你賺了多少</string>
    <string name="total_tai">共_____台</string>
    <string name="total_money">共_____元</string>
    <string name="w1">一萬</string>
    <string name="w2">二萬</string>
    <string name="w3">三萬</string>
    <string name="w4">四萬</string>
    <string name="w5">五萬</string>
    <string name="w6">六萬</string>
    <string name="w7">七萬</string>
    <string name="w8">八萬</string>
    <string name="w9">九萬</string>
    <string name="b1">一條</string>
    <string name="b2">二條</string>
    <string name="b3">三條</string>
    <string name="b4">四條</string>
    <string name="b5">五條</string>
    <string name="b6">六條</string>
    <string name="b7">七條</string>
    <string name="b8">八條</string>
    <string name="b9">九條</string>
    <string name="t1">一筒</string>
    <string name="t2">二筒</string>
    <string name="t3">三筒</string>
    <string name="t4">四筒</string>
    <string name="t5">五筒</string>
    <string name="t6">六筒</string>
    <string name="t7">七筒</string>
    <string name="t8">八筒</string>
    <string name="t9">九筒</string>
    <string name="east">東</string>
    <string name="south">南</string>
    <string name="west">西</string>
    <string name="north">北</string>
    <string name="redmiddle">紅中</string>
    <string name="whiteboard">白板</string>
    <string name="greenrich">發財</string>
    <string name="spring">春</string>
    <string name="summer">夏</string>
    <string name="fall">秋</string>
    <string name="winter">冬</string>
    <string name="plum">梅</string>
    <string name="lan">蘭</string>
    <string name="bamboo">竹</string>
    <string name="orange">菊</string>
    <string name="wind">風位</string>
    <string name="windeast">風位東</string>
    <string name="windwest">風位西</string>
    <string name="windsouth">風位南</string>
    <string name="windnorth">風位北</string>
    <string-array name="mahjong">
        <item>@string/w1</item>
        <item>@string/w2</item>
        <item>@string/w3</item>
        <item>@string/w4</item>
        <item>@string/w5</item>
        <item>@string/w6</item>
        <item>@string/w7</item>
        <item>@string/w8</item>
        <item>@string/w9</item>
        <item>@string/b1</item>
        <item>@string/b2</item>
        <item>@string/b3</item>
        <item>@string/b4</item>
        <item>@string/b5</item>
        <item>@string/b6</item>
        <item>@string/b7</item>
        <item>@string/b8</item>
        <item>@string/b9</item>
        <item>@string/t1</item>
        <item>@string/t2</item>
        <item>@string/t3</item>
        <item>@string/t4</item>
        <item>@string/t5</item>
        <item>@string/t6</item>
        <item>@string/t7</item>
        <item>@string/t8</item>
        <item>@string/t9</item>
        <item>@string/east</item>
        <item>@string/south</item>
        <item>@string/west</item>
        <item>@string/north</item>
        <item>@string/redmiddle</item>
        <item>@string/whiteboard</item>
        <item>@string/greenrich</item>
        <item>@string/spring</item>
        <item>@string/summer</item>
        <item>@string/fall</item>
        <item>@string/winter</item>
        <item>@string/plum</item>
        <item>@string/lan</item>
        <item>@string/bamboo</item>
        <item>@string/orange</item>
    </string-array>
    <string name="MoreScore_1">一台</string>
    <string name="MoreScore_2">兩台</string>
    <string name="MoreScore_4">四台</string>
    <string name="MoreScore_5">五台</string>
    <string name="MoreScore_8">八台</string>
    <string name="MoreScore_16">十六台</string>
    <string name="Majongnum_0">0</string>
    <string name="Majongnum_1">1</string>
    <string name="Majongnum_2">2</string>
    <string name="Majongnum_3">3</string>
    <string name="Majongnum_4">4</string>
    <string name="rule_setting">規則設定</string>
    <string name="Rule_NS_search">通用規則選擇</string>
    <string name="Rule1_Name">門清</string>
    <string name="Rule1_Explain">胡牌前沒有吃、碰、明槓，只可以有暗槓，這樣就是門清。只有摸到花牌依樣算是門清!</string>
    <string name="Rule2_Name">不求</string>
    <string name="Rule2_Explain">完全沒吃牌也沒碰牌，且胡牌的牌由自己摸進。</string>
    <string name="Rule3_Name">自摸</string>
    <string name="Rule3_Explain">胡牌的牌由自己摸進。</string>
    <string name="Rule4_Name">風牌</string>
    <string name="Rule4_Explain">拿自己所屬的風位的刻子。以開門為東風逆時針依序為東、南、西、北。</string>
    <string name="Rule5_Name">風圈</string>
    <string name="Rule5_Explain">風圈：我們常說東南西北，通常第一圈就叫做東風圈，然後就是南風圈、西風圈、北風圈。只要在該風圈拿到相對應的坎子(三支一樣)或槓子(四支一樣) ，就可獲得一台。</string>
    <string name="Rule6_Name">花牌</string>
    <string name="Rule6_Explain">拿到相對應的花牌，可以獲得一台喔！對應的方式如下：東風位(春、梅) | 南風位(夏、蘭) | 西風位(秋、菊) | 北風位(冬、竹)</string>
    <string name="Rule7_Name">搶槓</string>
    <string name="Rule7_Explain">如果別人要槓的牌，剛好是自己聽的牌，則可搶槓胡牌，獲得一台。搶槓胡牌是算在槓的人頭上!</string>
    <string name="Rule8_Name">三元牌</string>
    <string name="Rule8_Explain">只要組成紅中、發財、白板任何一種坎子(三張相同)或槓子(四張相同)，就可獲得1台。</string>
    <string name="Rule9_Name">獨聽</string>
    <string name="Rule9_Explain">邊張(聽的是順子的其中一邊)、中洞(只聽一組順子中間空下來的牌)、單吊(單聽一副對子)。</string>
    <string name="Rule10_Name">半求</string>
    <string name="Rule10_Explain">手牌只剩一張牌單吊自摸，而其餘全吃或碰。</string>
    <string name="Rule11_Name">槓上開花</string>
    <string name="Rule11_Explain">摸到花、加槓或暗槓後，從海底摸一張牌，如果摸進來的牌剛好自摸，就叫做稱為「槓上開花」，可以多或得一台！</string>
    <string name="Rule12_Name">河底撈魚</string>
    <string name="Rule12_Explain">胡別人丟出的最後一張牌。</string>
    <string name="Rule13_Name">海底撈月</string>
    <string name="Rule13_Explain">麻將每局都規定需要留下最後的16張牌，這16張通稱叫做海底，海底前未分出勝負就是流局。只要摸到海底前的最後一張牌並且自摸，就叫做海底撈月，可以多獲得一台。別家摸到海底而放砲，也能算海底撈月。</string>
    <string name="Rule14_Name">平胡</string>
    <string name="Rule14_Explain">胡牌由五組順子及一個對子組成，胡他人牌非自摸。、無花、無字、無坎(三張相同)、非中洞、非邊張、非單釣、非自摸，允許門清加1台。</string>
    <string name="Rule15_Name">全求</string>
    <string name="Rule15_Explain">胡牌時，手牌全部都已經吃碰放在外面，只剩最後一張牌在手，由其他任一家放炮而胡牌。</string>
    <string name="Rule16_Name">花槓</string>
    <string name="Rule16_Explain">胡牌時門前有『梅蘭竹菊』或『春夏秋冬』任一組。</string>
    <string name="Rule17_Name">三暗刻</string>
    <string name="Rule17_Explain">手牌裡，有三組刻子（包括暗槓)。</string>
    <string name="Rule18_Name">地聽</string>
    <string name="Rule18_Explain">在無人吃碰情況下，配牌後打出第一張牌即聽牌，且叫聽後不能換牌。天聽、地聽、獨聽、天胡、地胡、人胡、門清、不求不能算，可以加計自摸。</string>
    <string name="Rule19_Name">碰碰胡</string>
    <string name="Rule19_Explain">胡牌全部由刻子再加一個對子組成。</string>
    <string name="Rule20_Name">小三元</string>
    <string name="Rule20_Explain">胡牌者中、發、白其中二組是刻子一組是對子。</string>
    <string name="Rule21_Name">混一色</string>
    <string name="Rule21_Explain">胡牌者只有一種數牌，及字牌混合所組成。</string>
    <string name="Rule22_Name">四暗刻</string>
    <string name="Rule22_Explain">胡牌時，手牌裡有四組刻子。</string>
    <string name="Rule23_Name">天聽</string>
    <string name="Rule23_Explain">配牌即聽牌，且叫聽後不能換牌。門清、不求、天胡、地胡、地聽、獨聽不能算，可以加計自摸。</string>
    <string name="Rule24_Name">五暗刻</string>
    <string name="Rule24_Explain">胡牌時，手牌裡有五組刻子。</string>
    <string name="Rule25_Explain">胡牌時，有中、發、白三組刻子。</string>
    <string name="Rule26_Name">小四喜</string>
    <string name="Rule26_Explain">胡牌者完成東、南、西、北其中三組刻子，一組對子。</string>
    <string name="Rule27_Name">清一色</string>
    <string name="Rule27_Explain">整副牌為同一花色所組成，由筒、條或萬所組成的牌。</string>
    <string name="Rule28_Name">字一色</string>
    <string name="Rule28_Explain">全由字牌所組成之牌種，圈風、門風、三元牌台數皆可以複合計算。</string>
    <string name="Rule29_Name">八仙過海</string>
    <string name="Rule29_Explain">拿到全部八張花牌時，應完成補牌動作，才可喊胡，三家通賠一底八台。補進之牌，若造成手牌胡牌者，應另加計。補進之牌，若手牌沒有胡牌者，不得亮牌。</string>
    <string name="Rule30_Name">天胡</string>
    <string name="Rule30_Explain">莊家取完牌後，已經胡牌，稱為天胡。不得加計天聽、地聽、獨聽、地胡、人胡、門清、自摸、不求、半求、全求、搶槓、槓上開花、河底撈魚、海底撈月。其餘另計。</string>
    <string name="Rule31_Name">人胡</string>
    <string name="Rule31_Explain">配牌後，第一巡內，無發生吃、碰、明槓之情況，胡他人牌，算清16台，不得加計天聽、地聽、天胡、地胡、門清。其餘另計。</string>
    <string name="Rule32_Name">地胡</string>
    <string name="Rule32_Explain">配牌後，第一巡內，無發生吃、碰、明槓之情況，閒家於此巡內第一次摸牌即自摸胡，算清16台，不得加計自摸、門清、不求、天聽、地聽、天胡、人胡。其餘另計。</string>
    <string name="Rule33_Name">大四喜</string>
    <string name="Rule33_Explain">手牌(含已露牌)有風牌之4種刻(槓)子，不分明暗，算清16台，不得加計門風、圈風台。 其餘另計。</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
</resources>