<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandInputCheck"
    android:orientation="vertical">


    <CheckBox
        android:id="@+id/checkBox_Rule1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule1_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule2_Name"
        android:textSize="18sp"
         />

    <CheckBox
        android:id="@+id/checkBox_Rule3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule3_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule4_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule5_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule7_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule9_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule10_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule11_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule12_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule13_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule15_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule18_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule23_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule31_Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkBox_Rule32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rule32_Name"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/b_NextStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NextStep" />

</LinearLayout>
    </ScrollView>